src/test/ui/closures/2229_closure_analysis/filter-on-struct-member.stderr
warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/filter-on-struct-member.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error[E0502]: cannot borrow `self.list` as mutable because it is also borrowed as immutable
  --> $DIR/filter-on-struct-member.rs:22:9
   |
LL |           self.list.retain(
   |           ^         ------ immutable borrow later used by call
   |  _________|
   | |
LL | |             #[rustc_capture_analysis]
LL | |             |v| self.filter.allowed(*v),
   | |             --- ---- first borrow occurs due to use of `self` in closure
   | |             |
   | |             immutable borrow occurs here
LL | |         );
   | |_________^ mutable borrow occurs here

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0502`.
